--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sun Jan 23 20:54:28 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* po/da.po:
+
+	Danish translation got aspell'ed and a few typos were fixed.  
+
 Sat Jan 22 17:47:18 2005  Jonas Fonseca <fonseca@diku.dk>:
 
 	* po/da.po:
