--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Jan 24 13:03:36 2005  Laurent Monin <zas@norz.org>:
+
+	* po/fr.po:
+
+	French translation was updated.  
+
 Sun Jan 23 20:54:28 2005  Jonas Fonseca <fonseca@diku.dk>:
 
 	* po/da.po:
