--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Tue Jan 25 15:27:02 2005  Witold Filipczyk <witekfl@poczta.gazeta.pl>:
+
+	* po/pl.po:
+
+	Polish translation was updated.  
+
 Mon Jan 24 13:03:36 2005  Laurent Monin <zas@norz.org>:
 
 	* po/fr.po:
