--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,10 @@
 See ChangeLog for recent changes, bugfixes and new features.
 
+ELinks 0.10.2:
+
+* Ruby scripting back-end (experimental)
+* Debian package files (apt-get install devscripts && debuild)
+
 ELinks 0.10.0 (Thelma):
 
 * simple CSS
