--- a/po/da.po
+++ b/po/da.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: ELinks 0.10.CVS\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-01-25 23:50+0100\n"
-"PO-Revision-Date: 2005-01-29 13:08+0100\n"
+"PO-Revision-Date: 2005-01-31 19:27+0100\n"
 "Last-Translator: Jonas Fonseca <fonseca@diku.dk>\n"
 "Language-Team: Danish <dansk@klid.dk>\n"
 "MIME-Version: 1.0\n"
@@ -7311,7 +7311,7 @@ msgstr "Indsend formular og ~overfør fil"
 
 #: src/viewer/text/link.c:1213
 msgid "V~iew image"
-msgstr "Vis ~billede"
+msgstr "~Vis billede"
 
 #: src/viewer/text/link.c:1215
 msgid "Download ima~ge"
