--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+Tue Feb  1 01:01:31 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* contrib/perl/hooks.pl:
+
+	This revision adds a "mirrordot" or "md" url prefix in addition to
+	fixing the nil|" "|"" return issue that reared it's head since you
+	made the proxy hooks actually work. Patch by Russ Rowan.  
+
+Mon Jan 31 23:14:14 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* SITES:
+
+	Remove non-official (and now closed) Debian package archive.  
+
 Mon Jan 31 22:28:24 2005  Jonas Fonseca <fonseca@diku.dk>:
 
 	* po/da.po:
