--- a/po/hu.po
+++ b/po/hu.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: hu\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-02-11 22:37+0100\n"
-"PO-Revision-Date: 2005-02-09 06:20+0000\n"
+"POT-Creation-Date: 2005-02-16 03:24+0000\n"
+"PO-Revision-Date: 2005-02-16 04:00+0000\n"
 "Last-Translator: Balazs Varga <vinnui@ent.hu>\n"
 "Language-Team: Hungarian <none@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -58,13 +58,11 @@ msgstr "A mappa kinyitásához nyomd meg a Space billentyût."
 #: src/sched/session.c:730 src/sched/session.c:747
 #: src/scripting/lua/core.c:395 src/scripting/lua/core.c:476
 #: src/scripting/lua/core.c:593 src/scripting/lua/core.c:717
-#: src/scripting/ruby/core.c:63 src/scripting/ruby/core.c:159
-#: src/scripting/ruby/core.c:215 src/viewer/text/draw.c:67
-#: src/viewer/text/form.c:857 src/viewer/text/search.c:953
-#: src/viewer/text/search.c:1014 src/viewer/text/search.c:1459
-#: src/viewer/text/search.c:1570 src/viewer/text/textarea.c:366
-#: src/viewer/text/textarea.c:375 src/viewer/text/view.c:730
-#: src/viewer/text/view.c:1283
+#: src/viewer/text/draw.c:67 src/viewer/text/form.c:857
+#: src/viewer/text/search.c:953 src/viewer/text/search.c:1014
+#: src/viewer/text/search.c:1459 src/viewer/text/search.c:1570
+#: src/viewer/text/textarea.c:366 src/viewer/text/textarea.c:375
+#: src/viewer/text/view.c:730 src/viewer/text/view.c:1283
 msgid "OK"
 msgstr "OK"
 
@@ -752,8 +750,7 @@ msgstr "Az ismeretlen dokumentumok alapértelmezett MIME típusa."
 
 #: src/config/cmdline.c:647
 msgid "Ignore user-defined keybindings"
-msgstr ""
-"A felhasználó által definiált billentyûkombinációk figyelmen kívül hagyása"
+msgstr "A felhasználó által definiált billentyûkombinációk figyelmen kívül hagyása"
 
 #: src/config/cmdline.c:649
 msgid ""
@@ -772,8 +769,7 @@ msgstr "A megadott URL formázott változatának kiírása stdout-ra"
 
 #: src/config/cmdline.c:655
 msgid "Print formatted plain-text versions of given URLs to stdout."
-msgstr ""
-"A megadott URL formázott normál szöveges változatának kiírása stdout-ra."
+msgstr "A megadott URL formázott normál szöveges változatának kiírása stdout-ra."
 
 #: src/config/cmdline.c:657
 msgid "Codepage to use with -dump"
@@ -956,8 +952,7 @@ msgstr ""
 
 #: src/config/cmdline.c:744
 msgid "Connect to session ring with given ID"
-msgstr ""
-"Csatlakozás az ELinks belsõ adatmegosztó hálózatához megadott azonosítóval."
+msgstr "Csatlakozás az ELinks belsõ adatmegosztó hálózatához megadott azonosítóval."
 
 #: src/config/cmdline.c:746
 msgid ""
@@ -1397,8 +1392,7 @@ msgstr "Az \"URL-re ugrás\" dialógusablak megnyitása az aktuális URL-el"
 
 #: src/config/kbdbind.c:457
 msgid "Open \"Go to URL\" dialog box containing the current link URL"
-msgstr ""
-"Az \"URL-re ugrás\" dialógusablak megnyitása a kiválasztott link URL-jével"
+msgstr "Az \"URL-re ugrás\" dialógusablak megnyitása a kiválasztott link URL-jével"
 
 #: src/config/kbdbind.c:458
 msgid "Go to the homepage"
@@ -2061,8 +2055,7 @@ msgstr "Idötúllépési érték nem újraindítható kapcsolattípusoknál"
 
 #: src/config/options.inc:128
 msgid "Timeout for non-restartable connections (in seconds)."
-msgstr ""
-"Idötúllépési érték nem újraindítható kapcsolattípusoknál (másodpercben)"
+msgstr "Idötúllépési érték nem újraindítható kapcsolattípusoknál (másodpercben)"
 
 #. Keep options in alphabetical order.
 #: src/config/options.inc:134
@@ -2387,8 +2380,7 @@ msgstr "Színek invertálása"
 
 #: src/config/options.inc:285
 msgid "Invert the fore- and background color so the link stands out."
-msgstr ""
-"Invertálja az elõtér és a háttér színeit, hogy a linkek kiemelkedjenek."
+msgstr "Invertálja az elõtér és a háttér színeit, hogy a linkek kiemelkedjenek."
 
 #: src/config/options.inc:288 src/config/options.inc:792
 #: src/dialogs/options.c:199
@@ -2405,8 +2397,7 @@ msgstr "Alkönyvtárak kiemelése"
 
 #: src/config/options.inc:295
 msgid "Highlight links to directories in FTP and local directory listing."
-msgstr ""
-"Emelje ki a könyvtárakat az FTP, és a helyi könyvtárak böngészés esetén."
+msgstr "Emelje ki a könyvtárakat az FTP, és a helyi könyvtárak böngészés esetén."
 
 #: src/config/options.inc:297
 msgid "Number links"
@@ -2487,8 +2478,7 @@ msgstr "Linkek kiválasztása"
 msgid ""
 "When pressing 'down' on the last link, jump at the first one, and\n"
 "vice versa."
-msgstr ""
-"Ha az utolsó linken lefelé nyilat nyomsz, ugorjon az elsõre, és fordítva."
+msgstr "Ha az utolsó linken lefelé nyilat nyomsz, ugorjon az elsõre, és fordítva."
 
 #: src/config/options.inc:344
 msgid "Scrolling"
@@ -2562,8 +2552,7 @@ msgstr "Kis/nagybetû érzékenység"
 msgid ""
 "Whether the search should match the document text while maintaining\n"
 "case sensitivity."
-msgstr ""
-"A dokumentum szövegében való kereséskor a kis/nagybetûk figyelembe vétele."
+msgstr "A dokumentum szövegében való kereséskor a kis/nagybetûk figyelembe vétele."
 
 #: src/config/options.inc:380
 msgid "Regular expressions"
@@ -2721,8 +2710,7 @@ msgstr ""
 
 #: src/config/options.inc:467
 msgid "Ignore cache-control info from server"
-msgstr ""
-"A szervertõl kapott gyorsítótárvezérlési utasítások figyelmen kívül hagyása"
+msgstr "A szervertõl kapott gyorsítótárvezérlési utasítások figyelmen kívül hagyása"
 
 #: src/config/options.inc:469
 msgid ""
@@ -2869,8 +2857,7 @@ msgstr "A kontraszt biztosítása"
 
 #: src/config/options.inc:557
 msgid "Makes sure that the back- and foreground color are never equal."
-msgstr ""
-"Gondoskodik róla, hogy a háttérszín és a betûszín sose legyen egyforma."
+msgstr "Gondoskodik róla, hogy a háttérszín és a betûszín sose legyen egyforma."
 
 #. If you change this please also change ACT_MAIN_DOCUMENT_COLORS action
 #. * handling.
@@ -5052,8 +5039,7 @@ msgstr "Felugró ablakok szûrése"
 
 #: src/ecmascript/ecmascript.c:55
 msgid "Whether to disallow scripts to open new windows or tabs."
-msgstr ""
-"Engedélyezzük-e hogy a script-ek új ablakokat vagy füleket nyithassanak."
+msgstr "Engedélyezzük-e hogy a script-ek új ablakokat vagy füleket nyithassanak."
 
 #: src/ecmascript/spidermonkey.c:368
 msgid "JavaScript Alert"
@@ -5163,6 +5149,8 @@ msgstr "Mentés be/ki"
 msgid "Form history manager"
 msgstr "Ûrlapok listája"
 
+#. TODO: Remember multiple login for the same form.
+#. * TODO: Password manager GUI (here?) (in dialogs.c, of course --pasky).
 #: src/formhist/formhist.c:37
 msgid "Show form history dialog"
 msgstr "Mutassa az ûrlapok listáját"
@@ -5425,8 +5413,7 @@ msgstr "Ukrán"
 
 #: src/lowlevel/home.c:122
 #, c-format
-msgid ""
-"Commandline options -config-dir set to %s, but could not create directory %s."
+msgid "Commandline options -config-dir set to %s, but could not create directory %s."
 msgstr ""
 "Parancssori opciók -konfig könyvtár %s, de nem lehet létrehozni a %s "
 "könyvtárat."
@@ -5674,7 +5661,7 @@ msgstr "A mime.type támogatás engedélyezése."
 
 #: src/mime/backend/mimetypes.c:59
 msgid "The search path for mime.types files. Colon-separated list of files."
-msgstr ""
+msgstr "A mime.types fájlok elérési útvonalainak listája, vesszõvel elválasztva."
 
 #: src/mime/dialogs.c:66
 msgid "Delete extension"
@@ -6802,6 +6789,13 @@ msgid ""
 "a host name optionally followed by a colon\n"
 "and a port number. Example: 'localhost:8080'."
 msgstr ""
+"A proxykiszolgáló beállítása nem sikerült.\n"
+"Ennek az oka egy rosszul beállított környezeti\n"
+"változó lehet.\n"
+"\n"
+"A proxy beállítás korrekt szintaxisa egy gépnév,\n"
+"ami opcionálisan egy port érték követ kettõsponttal\n"
+"elválasztva. Pl.: 'localhost:8080'."
 
 #: src/sched/error.c:135
 msgid "Unknown error"
@@ -6868,6 +6862,11 @@ msgid ""
 "\n"
 "Do you want to go to URL %s?"
 msgstr ""
+"Az URL amire az oldal hivatkozik rosszindulatúan manipulált, hogy"
+"megtévesszen téged. Ha követed, akkor a \"%s\" hostra fogsz kapcsódni,"
+"a \"%s\" felhasználónévvel.\n"
+"\n"
+"Szeretnél továbblépni a %s URL-re?"
 
 #: src/sched/task.c:249
 #, c-format
@@ -6908,15 +6907,6 @@ msgstr "Lua konzol"
 #: src/scripting/lua/core.c:716
 msgid "Enter expression"
 msgstr "Kifejezés"
-
-#: src/scripting/ruby/core.c:60
-#, fuzzy
-msgid "Ruby Error"
-msgstr "Lua hiba"
-
-#: src/scripting/ruby/core.c:156 src/scripting/ruby/core.c:212
-msgid "Ruby Message"
-msgstr ""
 
 #. name:
 #: src/scripting/scripting.c:40
@@ -7224,7 +7214,7 @@ msgstr "Nem lehet értelmezni a következõ reguláris kifejezést: '%s'"
 #: src/viewer/text/search.c:1042
 #, c-format
 msgid "No further matches for '%s'."
-msgstr ""
+msgstr "Nincs több találat erre: '%s'."
 
 #: src/viewer/text/search.c:1044
 #, c-format
@@ -7290,3 +7280,4 @@ msgstr "Mentési hiba"
 #: src/viewer/text/view.c:1281
 msgid "Error writing to file"
 msgstr "Hiba a fájl irása közben"
+
