Polish translation was updated

--- a/po/pl.po
+++ b/po/pl.po
@@ -9,10 +9,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: ELinks 0.10.CVS\n"
+"Project-Id-Version: ELinks 0.11.CVS\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-02-11 22:37+0100\n"
-"PO-Revision-Date: 2005-02-04 01:40+0100\n"
+"POT-Creation-Date: 2005-02-16 17:40+0100\n"
+"PO-Revision-Date: 2005-02-16 17:45+0100\n"
 "Last-Translator: Adam Golebiowski <adamg@pld-linux.org>\n"
 "Language-Team: Polish <translation-team-pl@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -6978,6 +6978,14 @@ msgid ""
 "a host name optionally followed by a colon\n"
 "and a port number. Example: 'localhost:8080'."
 msgstr ""
+"Konfiguracja serwera proxy nie powiod³a siê.\n"
+"Mo¿e byæ to spowodowane nieprawid³owymi ustawieniami\n"
+"proxy pochodz±cych ze zmiennych ¶rodowiskowych lub\n"
+"zwróconych przez wywo³anie skryptowe proxy.\n"
+"\n"
+"Poprawna sk³adnia dla proxy to nazwa komputera\n"
+"oraz (opcjonalnie) dwukropek i numer portu.\n"
+"Przyk³ad: 'localhost:8080'."
 
 #: src/sched/error.c:135
 msgid "Unknown error"
